...



    // MARK: Lifecycle
    override func viewDidLoad() {
        super.viewDidLoad()
        navigationItem.title = "Phonebook"
        navigationItem.leftBarButtonItem = UIBarButtonItem(
            barButtonSystemItem: .add,
            target: self,
            action: #selector(addContact))
        
        view.addSubview(tableView)
...
        
        // set up relationship with Phonebook manager
        PhonebookManager.shared.delegate = self
        
        // set identifier to facilitate UI Test
        view.accessibilityIdentifier = "FriendsView"
        tableView.accessibilityIdentifier = "table-FriendsView"
    }
    
    override func viewDidAppear(_ animated: Bool) {
        super.viewDidAppear(animated)
        // populate table
        let contacts = PhonebookManager.shared.getAll()
...
